Correct baseline and spacing

--- a/_init.scss
+++ b/_init.scss
@@ -56,8 +56,8 @@ $mono-stack: monospace, monospace !default;
 $font-family: Helvetica, Arial, sans-serif !default;
 $bg-color: $white !default;
 $text-color: $grey-darkest !default;
-$spacing-unit: 1 !default;
-$baseline: 1 !default;
+$spacing-unit: 0.25rem !default;
+$baseline: 1.500 !default;
 
 // mixin
 
